# barter_to_money

./: .coveragerc  .gitignore  .secrets.baseline  Makefile  README.md  pyproject.toml  theory.md
results/: README.md  all_results.md  all_runs_aggregate.csv  all_runs_aggregate.md  all_runs_full.csv  all_runs_full.md  runs_core_aggregate.csv  runs_core_aggregate.md  runs_core_full.csv  runs_core_full.md  showcase.md
results/paper/: core_sweep_table.tex  showcase_table.tex
src/agentic_economy/: __init__.py  analysis.py  cli.py  llm_client.py  prompts.py  reporting.py  results_pages.py  simulation.py
tests/: test_reporting.py  test_results_pages.py  test_simulation.py
